# rlottie-to-gif-api

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  conanfile.txt  test.http
src/: App.cc  AppComponent.h
src/controller/: RenderController.cc  RenderController.h
src/dto/: RenderError.h  RenderRequest.h  RenderResult.h
src/utility/: DoRender.cc  GifBuilder.cc  GifBuilder.h  render.cc  render.h
tester/: .gitignore  go.mod  main.go
